--- a/MyConvert/MyRules_TAG.ini
+++ b/MyConvert/MyRules_TAG.ini
@@ -32,7 +32,7 @@ custom_proxy_group=Bilibili`select`[]DIRECT`(香港|台灣|台湾|HK|TW|澳门)
 custom_proxy_group=YouTube`select`[]GlobalMedia`.*
 custom_proxy_group=GlobalMedia`select`[]Proxy`.*
 custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy.*
+custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
 custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy
 
 custom_proxy_group=Fallback`fallback`.*`http://www.gstatic.com/generate_204`300,,50
