--- a/MyConvert/MyRules_Cloud.ini
+++ b/MyConvert/MyRules_Cloud.ini
@@ -2,8 +2,8 @@
 ;不要随意改变关键字，否则会导致出错
 
 ; 规则组
-ruleset=AdBlock,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Reject.yaml,86400
 ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Direct.yaml,86400
+ruleset=AdBlock,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Reject.yaml,86400
 ruleset=OpenAI,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/OpenAI.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Apple.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Microsoft.yaml,86400
@@ -22,20 +22,32 @@ ruleset=Others,[]MATCH
 
 
 ; 规则组节点
-custom_proxy_group=Proxy`select`[]Fallback`.*
+custom_proxy_group=Proxy`select`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-Detour-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=OpenAI`select`[]Proxy`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
-custom_proxy_group=Bilibili`select`[]DIRECT`(香港|台灣)
+custom_proxy_group=Bilibili`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(台|新北|彰化|TW|Taiwan|港|HK|Hong Kong|HKT|澳门|澳門|Macao)
 
 custom_proxy_group=YouTube`select`[]GlobalMedia`.*
 custom_proxy_group=GlobalMedia`select`[]Proxy`.*
-custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`(狮城|新加坡|SG|sg)
-custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
-custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy
+custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
+custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
+custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy`.*
 
-custom_proxy_group=Fallback`fallback`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-JP-select`url-test`(SZ-JP)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-SG-select`url-test`(SZ-SG)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=JP-Detour-select`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=TW-Detour-select`url-test`(TW-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-HK-select`url-test`(SZ-HK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=HKT-Detour-select`url-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-US-select`url-test`(SZ-US)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=LA-Detour-select`url-test`(LA-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=UK-Detour-select`url-test`(UK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=DE-Detour-select`url-test`(DE)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=SG-Detour-select`url-test`(SG-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Oz-Detour-select`url-test`(Oz)`http://www.gstatic.com/generate_204`300,,50
+
 
 enable_rule_generator=true
 overwrite_original_rules=true
