--- a/MyConvert/MyRules_YTOO.ini
+++ b/MyConvert/MyRules_YTOO.ini
@@ -2,8 +2,8 @@
 ;不要随意改变关键字，否则会导致出错
 
 ; 规则组
-ruleset=AdBlock,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Reject.yaml,86400
 ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Direct.yaml,86400
+ruleset=AdBlock,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Reject.yaml,86400
 ruleset=OpenAI,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/OpenAI.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Apple.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Microsoft.yaml,86400
@@ -21,21 +21,20 @@ ruleset=Domestic,[]GEOIP,CN
 ruleset=Others,[]MATCH
 
 
+
 ; 规则组节点
-custom_proxy_group=Proxy`select`[]Fallback`.*
+custom_proxy_group=Proxy`select`.*
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=OpenAI`select`[]Proxy`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
-custom_proxy_group=Bilibili`select`[]DIRECT`(香港|台灣|台湾|HK|TW|澳门)
+custom_proxy_group=Bilibili`select`[]DIRECT`(台|新北|彰化|TW|Taiwan|港|HK|Hong Kong|HKT|澳门|澳門|Macao)
 
 custom_proxy_group=YouTube`select`[]GlobalMedia`.*
 custom_proxy_group=GlobalMedia`select`[]Proxy`.*
-custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`(狮城|新加坡|SG|sg)
-custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
-custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy
-
-custom_proxy_group=Fallback`fallback`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
+custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
+custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
