--- a/MyConvert/MyRules.ini
+++ b/MyConvert/MyRules.ini
@@ -21,12 +21,12 @@ ruleset=Domestic,[]GEOIP,CN
 ruleset=Others,[]MATCH
 
 ; 规则组节点
-custom_proxy_group=Proxy`select`.*
+custom_proxy_group=Proxy`select`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-Detour-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=OpenAI`select`[]Proxy`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
-custom_proxy_group=Bilibili`select`[]DIRECT`(台|新北|彰化|TW|Taiwan|港|HK|Hong Kong|HKT|澳门|澳門|Macao)
+custom_proxy_group=Bilibili`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(台|新北|彰化|TW|Taiwan|港|HK|Hong Kong|HKT|澳门|澳門|Macao)
 
 custom_proxy_group=YouTube`select`[]GlobalMedia`.*
 custom_proxy_group=GlobalMedia`select`[]Proxy`.*
@@ -34,23 +34,18 @@ custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
 custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy`.*
 
-custom_proxy_group=Japan`url-test`(JP|jp|japan|Japan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong|HKT)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=Singapore`url-test`(SG|Singapore|新加坡|狮城|坡)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=US`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|LA)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=Türkiye`url-test`(土耳其|Turkiye)`http://www.gstatic.com/generate_204`300,,300
-
-custom_proxy_group=India`url-test`(印度|India)`http://www.gstatic.com/generate_204`300,,300
-
-custom_proxy_group=Argentina`url-test`(阿根廷|Argentina)`http://www.gstatic.com/generate_204`300,,300
-
-custom_proxy_group=Russia`url-test`(俄罗斯|Russia)`http://www.gstatic.com/generate_204`300,,300
+custom_proxy_group=IEPL-JP-select`url-test`(SZ-JP)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-SG-select`url-test`(SZ-SG)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=JP-Detour-select`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=TW-Detour-select`url-test`(TW-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-HK-select`url-test`(SZ-HK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=HKT-Detour-select`url-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-US-select`url-test`(SZ-US)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=LA-Detour-select`url-test`(LA-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=UK-Detour-select`url-test`(UK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=DE-Detour-select`url-test`(DE)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=SG-Detour-select`url-test`(SG-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Oz-Detour-select`url-test`(Oz)`http://www.gstatic.com/generate_204`300,,50
 
 
 
