--- a/MyConvert/MyRules_TAG.ini
+++ b/MyConvert/MyRules_TAG.ini
@@ -35,6 +35,24 @@ custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
 custom_proxy_group=SpeedTest`select`[]DIRECT`[]Proxy`.*
 
+custom_proxy_group=Japan`url-test`(JP|jp|japan|Japan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong|HKT)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=Singapore`url-test`(SG|Singapore|新加坡|狮城|坡)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=US`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|LA)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=Türkiye`url-test`(土耳其|Turkiye)`http://www.gstatic.com/generate_204`300,,300
+
+custom_proxy_group=India`url-test`(印度|India)`http://www.gstatic.com/generate_204`300,,300
+
+custom_proxy_group=Argentina`url-test`(阿根廷|Argentina)`http://www.gstatic.com/generate_204`300,,300
+
+custom_proxy_group=Russia`url-test`(俄罗斯|Russia)`http://www.gstatic.com/generate_204`300,,300
+
 enable_rule_generator=true
 overwrite_original_rules=true
 
