--- a/Rules_Provider/Integrate/Direct.yaml
+++ b/Rules_Provider/Integrate/Direct.yaml
@@ -99,27 +99,34 @@ payload:
   - DOMAIN-SUFFIX,a.e.f.ip6.arpa
   - DOMAIN-SUFFIX,acl4.ssr
   - DOMAIN-SUFFIX,b.e.f.ip6.arpa
+  - DOMAIN-SUFFIX,captive.apple.com
+  - DOMAIN-SUFFIX,connectivitycheck.gstatic.com
   - DOMAIN-SUFFIX,d.f.ip6.arpa
   - DOMAIN-SUFFIX,hiwifi.com
   - DOMAIN-SUFFIX,home.arpa
   - DOMAIN-SUFFIX,leike.cc
   - DOMAIN-SUFFIX,localhost.ptlogin2.qq.com
   - DOMAIN-SUFFIX,localhost.sec.qq.com
-  - DOMAIN-SUFFIX,miwifi.com
   - DOMAIN-SUFFIX,msftconnecttest.com
   - DOMAIN-SUFFIX,msftncsi.com
   - DOMAIN-SUFFIX,my.router
+  - DOMAIN-SUFFIX,networkcheck.kde.org
   - DOMAIN-SUFFIX,p.to
   - DOMAIN-SUFFIX,peiluyou.com
   - DOMAIN-SUFFIX,phicomm.me
+  - DOMAIN-SUFFIX,plex.direct
   - DOMAIN-SUFFIX,router.ctc
   - DOMAIN-SUFFIX,routerlogin.com
   - DOMAIN-SUFFIX,tendawifi.com
   - DOMAIN-SUFFIX,tplinkwifi.net
+  - DOMAIN-SUFFIX,tplogin.cn
+  - DOMAIN-SUFFIX,wifi.cmcc
   - DOMAIN-SUFFIX,zte.home
+  - DOMAIN,asusrouter.com
   - DOMAIN,instant.arubanetworks.com
   - DOMAIN,router.asus.com
   - DOMAIN,setmeup.arubanetworks.com
+  - DOMAIN,www.asusrouter.com
   - IP-CIDR,0.0.0.0/8
   - IP-CIDR,10.0.0.0/8
   - IP-CIDR,100.64.0.0/10
@@ -134,9 +141,10 @@ payload:
   - IP-CIDR,198.51.100.0/24
   - IP-CIDR,203.0.113.0/24
   - IP-CIDR,224.0.0.0/3
-  - IP-CIDR6,::1/128
+  - IP-CIDR6,::/127
   - IP-CIDR6,fc00::/7
   - IP-CIDR6,fe80::/10
+  - IP-CIDR6,ff00::/8
 
   # Dler Cloud
   - DOMAIN-SUFFIX,dler.cloud
