--- a/Rules_Provider/Complete/Game/Riot.yaml
+++ b/Rules_Provider/Complete/Game/Riot.yaml
@@ -1,5 +1,5 @@
 # NAME: Riot
-# 总条数: 54条
+# 总条数: 55条
 payload:
   - DOMAIN-SUFFIX,championshipseriesleague.com
   - DOMAIN-SUFFIX,convrgencegame.com
@@ -48,6 +48,7 @@ payload:
   - DOMAIN-SUFFIX,riotgames.jp
   - DOMAIN-SUFFIX,riotgames.net
   - DOMAIN-SUFFIX,riotgames.tv
+  - DOMAIN-SUFFIX,riotgames.zendesk.com
   - DOMAIN-SUFFIX,riotpin.com
   - DOMAIN-SUFFIX,riotpoints.com
   - DOMAIN-SUFFIX,rstatic.net
