--- a/Rules_Provider/Complete/GlobalMedia/Netflix.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/Netflix.yaml
@@ -1,10 +1,11 @@
 # > Netflix
-# 总条数: 1051条
+# 总条数: 1071条
 payload:
   - DOMAIN-KEYWORD,apiproxy-device-prod-nlb-
   - DOMAIN-KEYWORD,dualstack.apiproxy-
   - DOMAIN-KEYWORD,dualstack.ichnaea-web-
   - DOMAIN-KEYWORD,netflixdnstest
+  - DOMAIN-SUFFIX,cookielaw.org
   - DOMAIN-SUFFIX,fast.com
   - DOMAIN-SUFFIX,flxvpn.net
   - DOMAIN-SUFFIX,netflix.ca
@@ -32,6 +33,7 @@ payload:
   - DOMAIN-SUFFIX,nflxsearch.net
   - DOMAIN-SUFFIX,nflxso.net
   - DOMAIN-SUFFIX,nflxvideo.net
+  - DOMAIN-SUFFIX,onetrust.com
   - DOMAIN-SUFFIX,us-west-2.amazonaws.com
   - DOMAIN,e13252.dscg.akamaiedge.net
   - DOMAIN,h-netflix.online-metrix.net
@@ -257,6 +259,8 @@ payload:
   - IP-CIDR,15.164.243.192/27
   - IP-CIDR,15.164.243.32/27
   - IP-CIDR,15.165.224.0/23
+  - IP-CIDR,15.168.105.144/28
+  - IP-CIDR,15.168.105.160/29
   - IP-CIDR,15.184.125.0/25
   - IP-CIDR,15.184.125.128/26
   - IP-CIDR,15.184.125.224/29
@@ -324,7 +328,9 @@ payload:
   - IP-CIDR,16.163.196.0/22
   - IP-CIDR,16.163.206.0/23
   - IP-CIDR,16.171.48.0/22
+  - IP-CIDR,16.24.46.56/29
   - IP-CIDR,16.50.248.32/28
+  - IP-CIDR,16.50.248.80/29
   - IP-CIDR,16.50.67.0/25
   - IP-CIDR,16.50.67.128/26
   - IP-CIDR,16.50.69.192/27
@@ -332,6 +338,7 @@ payload:
   - IP-CIDR,16.62.54.0/25
   - IP-CIDR,16.62.56.224/27
   - IP-CIDR,16.62.7.192/26
+  - IP-CIDR,16.63.77.8/29
   - IP-CIDR,160.1.128.0/24
   - IP-CIDR,176.34.159.192/26
   - IP-CIDR,177.71.207.128/26
@@ -339,6 +346,7 @@ payload:
   - IP-CIDR,18.100.209.224/27
   - IP-CIDR,18.100.64.128/25
   - IP-CIDR,18.100.65.0/26
+  - IP-CIDR,18.101.90.48/29
   - IP-CIDR,18.102.2.0/23
   - IP-CIDR,18.117.239.68/30
   - IP-CIDR,18.130.91.144/29
@@ -449,6 +457,11 @@ payload:
   - IP-CIDR,18.237.140.160/29
   - IP-CIDR,18.246.107.128/29
   - IP-CIDR,18.246.107.8/29
+  - IP-CIDR,18.246.176.0/24
+  - IP-CIDR,18.246.178.0/23
+  - IP-CIDR,18.246.181.0/24
+  - IP-CIDR,18.246.182.0/23
+  - IP-CIDR,18.246.184.0/23
   - IP-CIDR,18.252.145.156/30
   - IP-CIDR,18.252.145.160/28
   - IP-CIDR,18.252.145.192/27
@@ -460,6 +473,7 @@ payload:
   - IP-CIDR,18.254.140.0/22
   - IP-CIDR,18.254.148.0/22
   - IP-CIDR,18.254.68.0/23
+  - IP-CIDR,18.60.252.248/29
   - IP-CIDR,18.60.64.192/26
   - IP-CIDR,18.60.68.0/25
   - IP-CIDR,18.60.78.192/27
@@ -698,6 +712,8 @@ payload:
   - IP-CIDR,3.28.65.0/26
   - IP-CIDR,3.28.70.48/28
   - IP-CIDR,3.28.70.96/27
+  - IP-CIDR,3.29.147.40/29
+  - IP-CIDR,3.29.147.48/28
   - IP-CIDR,3.29.40.128/25
   - IP-CIDR,3.29.40.64/26
   - IP-CIDR,3.29.57.0/26
@@ -870,10 +886,13 @@ payload:
   - IP-CIDR,35.93.124.0/22
   - IP-CIDR,37.77.184.0/21
   - IP-CIDR,38.72.126.0/24
+  - IP-CIDR,43.198.192.104/29
   - IP-CIDR,43.201.155.152/29
   - IP-CIDR,43.201.155.160/29
   - IP-CIDR,43.207.179.168/29
   - IP-CIDR,43.207.179.176/29
+  - IP-CIDR,43.218.193.64/29
+  - IP-CIDR,43.218.193.96/28
   - IP-CIDR,43.218.56.128/25
   - IP-CIDR,43.218.56.64/26
   - IP-CIDR,43.218.71.0/26
@@ -922,6 +941,7 @@ payload:
   - IP-CIDR,51.16.103.16/28
   - IP-CIDR,51.16.103.32/27
   - IP-CIDR,51.16.183.64/27
+  - IP-CIDR,51.17.72.0/22
   - IP-CIDR,52.0.0.0/15
   - IP-CIDR,52.10.0.0/15
   - IP-CIDR,52.12.0.0/15
