--- a/Rules_Provider/Integrate/OpenAI.yaml
+++ b/Rules_Provider/Integrate/OpenAI.yaml
@@ -3,8 +3,15 @@
 payload:
   - DOMAIN-KEYWORD,openai
   - DOMAIN-SUFFIX,ai.com
+  - DOMAIN-SUFFIX,auth0.com
   - DOMAIN-SUFFIX,challenges.cloudflare.com
+  - DOMAIN-SUFFIX,client-api.arkoselabs.com
+  - DOMAIN-SUFFIX,events.statsigapi.net
+  - DOMAIN-SUFFIX,featuregates.org
   - DOMAIN-SUFFIX,identrust.com
+  - DOMAIN-SUFFIX,intercom.io
+  - DOMAIN-SUFFIX,intercomcdn.com
+  - DOMAIN-SUFFIX,poe.com
+  - DOMAIN-SUFFIX,sentry.io
   - DOMAIN-SUFFIX,stripe.com
-  - DOMAIN,cdn.auth0.com
-  - DOMAIN,o33249.ingest.sentry.io
+  - DOMAIN,ai.cn
