--- a/Rules_Provider/Complete/Other/Google.yaml
+++ b/Rules_Provider/Complete/Other/Google.yaml
@@ -1,5 +1,5 @@
 # > Google
-# 总条数: 735条
+# 总条数: 782条
 payload:
   - DOMAIN-KEYWORD,appspot
   - DOMAIN-KEYWORD,blogspot
@@ -219,8 +219,6 @@ payload:
   - DOMAIN-SUFFIX,feedburner.com
   - DOMAIN-SUFFIX,fflick.com
   - DOMAIN-SUFFIX,financeleadsonline.com
-  - DOMAIN-SUFFIX,firebase.com
-  - DOMAIN-SUFFIX,firebase.io
   - DOMAIN-SUFFIX,firebaseapp.com
   - DOMAIN-SUFFIX,firebaseio.com
   - DOMAIN-SUFFIX,flutter.dev
@@ -241,9 +239,7 @@ payload:
   - DOMAIN-SUFFIX,get.app
   - DOMAIN-SUFFIX,get.dev
   - DOMAIN-SUFFIX,get.how
-  - DOMAIN-SUFFIX,get.new
   - DOMAIN-SUFFIX,get.page
-  - DOMAIN-SUFFIX,get.rsvp
   - DOMAIN-SUFFIX,getbumptop.com
   - DOMAIN-SUFFIX,getmdl.io
   - DOMAIN-SUFFIX,getoutline.org
@@ -269,7 +265,6 @@ payload:
   - DOMAIN-SUFFIX,googel.com
   - DOMAIN-SUFFIX,googil.com
   - DOMAIN-SUFFIX,googl.com
-  - DOMAIN-SUFFIX,google-access.net
   - DOMAIN-SUFFIX,google-analytics-cn.com
   - DOMAIN-SUFFIX,google-analytics.com
   - DOMAIN-SUFFIX,google-syndication.com
@@ -300,7 +295,6 @@ payload:
   - DOMAIN-SUFFIX,google.cl
   - DOMAIN-SUFFIX,google.cm
   - DOMAIN-SUFFIX,google.cn
-  - DOMAIN-SUFFIX,google.co
   - DOMAIN-SUFFIX,google.co.ao
   - DOMAIN-SUFFIX,google.co.bw
   - DOMAIN-SUFFIX,google.co.ck
@@ -522,7 +516,6 @@ payload:
   - DOMAIN-SUFFIX,googleusercontent.com
   - DOMAIN-SUFFIX,googlevads-cn.com
   - DOMAIN-SUFFIX,googleventures.com
-  - DOMAIN-SUFFIX,googlezip.net
   - DOMAIN-SUFFIX,googlr.com
   - DOMAIN-SUFFIX,goolge.com
   - DOMAIN-SUFFIX,gooogle.com
@@ -543,9 +536,7 @@ payload:
   - DOMAIN-SUFFIX,gvt7.com
   - DOMAIN-SUFFIX,gvt9.com
   - DOMAIN-SUFFIX,gwtproject.org
-  - DOMAIN-SUFFIX,haplorrhini.com
   - DOMAIN-SUFFIX,hdrplusdata.org
-  - DOMAIN-SUFFIX,hey.boo
   - DOMAIN-SUFFIX,hey.gle
   - DOMAIN-SUFFIX,hindiweb.com
   - DOMAIN-SUFFIX,howtogetmo.co.uk
@@ -560,8 +551,6 @@ payload:
   - DOMAIN-SUFFIX,jibemobile.com
   - DOMAIN-SUFFIX,kaggle.com
   - DOMAIN-SUFFIX,kaggle.io
-  - DOMAIN-SUFFIX,kaggle.net
-  - DOMAIN-SUFFIX,kaggleusercontent.com
   - DOMAIN-SUFFIX,keyhole.com
   - DOMAIN-SUFFIX,keytransparency.com
   - DOMAIN-SUFFIX,keytransparency.foo
@@ -595,7 +584,6 @@ payload:
   - DOMAIN-SUFFIX,near.by
   - DOMAIN-SUFFIX,nest.com
   - DOMAIN-SUFFIX,neverware.com
-  - DOMAIN-SUFFIX,new.day
   - DOMAIN-SUFFIX,nomulus.foo
   - DOMAIN-SUFFIX,oasisfeng.com
   - DOMAIN-SUFFIX,oauthz.com
@@ -763,6 +751,7 @@ payload:
   - IP-CIDR,142.250.31.188/32
   - IP-CIDR,142.250.4.188/32
   - IP-CIDR,142.250.96.188/32
+  - IP-CIDR,172.110.32.0/21
   - IP-CIDR,172.217.194.188/32
   - IP-CIDR,172.217.218.188/32
   - IP-CIDR,172.217.219.188/32
@@ -772,6 +761,7 @@ payload:
   - IP-CIDR,173.194.175.188/32
   - IP-CIDR,173.194.218.188/32
   - IP-CIDR,209.85.233.188/32
+  - IP-CIDR,216.73.80.0/20
   - IP-CIDR,64.233.177.188/32
   - IP-CIDR,64.233.186.188/32
   - IP-CIDR,64.233.187.188/32
@@ -786,6 +776,7 @@ payload:
   - IP-CIDR,74.125.23.188/32
   - IP-CIDR,74.125.24.188/32
   - IP-CIDR,74.125.28.188/32
+  - IP-CIDR6,2620:120:e000::/40
   - PROCESS-NAME,BackupandSync
   - PROCESS-NAME,com.android.vending
   - PROCESS-NAME,com.google.android.gms
