--- a/Rules_Provider/Complete/GlobalMedia/JOOX.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/JOOX.yaml
@@ -1,6 +1,10 @@
 # > JOOX
 # 总条数: 3条
 payload:
-  - DOMAIN-SUFFIX,joox.com
   - DOMAIN-KEYWORD,jooxweb-api
+  - DOMAIN-SUFFIX,i-joox.com
+  - DOMAIN-SUFFIX,joox.com
+  - DOMAIN-SUFFIX,sanook.com
+  - IP-CIDR,119.28.182.0/23
+  - IP-CIDR,203.205.234.0/23
   - PROCESS-NAME,com.tencent.ibg.joox
