--- a/Rules_Provider/Integrate/GlobalMedia.yaml
+++ b/Rules_Provider/Integrate/GlobalMedia.yaml
@@ -669,7 +669,6 @@ payload:
   - DOMAIN-SUFFIX,theplatform.com
   - DOMAIN-SUFFIX,uplynk.com
 # > HBO
-  - DOMAIN,wmff.warnermediacdn.com
   - DOMAIN-SUFFIX,bcbolthboa-a.akamaihd.net
   - DOMAIN-SUFFIX,cf-images.ap-southeast-1.prod.boltdns.net
   - DOMAIN-SUFFIX,cinemax.com
@@ -700,6 +699,7 @@ payload:
   - DOMAIN-SUFFIX,hbogoasia.tw
   - DOMAIN-SUFFIX,hbogoprod-vod.akamaized.net
   - DOMAIN-SUFFIX,hbolb.onwardsmg.com
+  - DOMAIN-SUFFIX,hbomax-images.warnermediacdn.com
   - DOMAIN-SUFFIX,hbomax.com
   - DOMAIN-SUFFIX,hbomaxcdn.com
   - DOMAIN-SUFFIX,hbomaxdash.s.llnwi.net
@@ -716,12 +716,13 @@ payload:
   - DOMAIN-SUFFIX,players.brightcove.net
   - DOMAIN-SUFFIX,s3-ap-southeast-1.amazonaws.com
   - DOMAIN-SUFFIX,youboranqs01.com
+  - DOMAIN,wmff.warnermediacdn.com
   - PROCESS-NAME,com.hbo.hbonow
 # > HBOAsia
-  - DOMAIN,44wilhpljf.execute-api.ap-southeast-1.amazonaws.com
   - DOMAIN-KEYWORD,.hbogoasia.
   - DOMAIN-SUFFIX,hbogoasia.com
   - DOMAIN-SUFFIX,hbogoasia.hk
+  - DOMAIN,44wilhpljf.execute-api.ap-southeast-1.amazonaws.com
   - DOMAIN,bcbolthboa-a.akamaihd.net
   - DOMAIN,cf-images.ap-southeast-1.prod.boltdns.net
   - DOMAIN,dai3fd1oh325y.cloudfront.net
@@ -900,8 +901,12 @@ payload:
   - DOMAIN-SUFFIX,japronx.tv
   - DOMAIN-SUFFIX,japronx.vip
 # > JOOX
-  - DOMAIN-SUFFIX,joox.com
   - DOMAIN-KEYWORD,jooxweb-api
+  - DOMAIN-SUFFIX,i-joox.com
+  - DOMAIN-SUFFIX,joox.com
+  - DOMAIN-SUFFIX,sanook.com
+  - IP-CIDR,119.28.182.0/23
+  - IP-CIDR,203.205.234.0/23
   - PROCESS-NAME,com.tencent.ibg.joox
 # > KKBOX
   - DOMAIN-SUFFIX,kfs.io
@@ -980,9 +985,12 @@ payload:
   - IP-CIDR,108.136.122.0/25
   - IP-CIDR,108.136.154.16/28
   - IP-CIDR,108.136.154.32/27
+  - IP-CIDR,108.136.170.0/23
   - IP-CIDR,108.136.38.192/26
   - IP-CIDR,108.137.114.0/28
   - IP-CIDR,108.137.114.64/26
+  - IP-CIDR,108.137.25.0/24
+  - IP-CIDR,108.137.26.0/24
   - IP-CIDR,108.175.32.0/20
   - IP-CIDR,13.112.191.184/29
   - IP-CIDR,13.113.196.64/26
@@ -998,6 +1006,7 @@ payload:
   - IP-CIDR,13.126.243.0/24
   - IP-CIDR,13.127.70.128/27
   - IP-CIDR,13.127.70.160/29
+  - IP-CIDR,13.200.140.0/23
   - IP-CIDR,13.200.7.128/28
   - IP-CIDR,13.208.131.0/27
   - IP-CIDR,13.208.131.128/26
@@ -1264,15 +1273,22 @@ payload:
   - IP-CIDR,16.163.206.0/23
   - IP-CIDR,16.171.48.0/22
   - IP-CIDR,16.24.46.56/29
+  - IP-CIDR,16.50.184.0/23
   - IP-CIDR,16.50.248.32/28
   - IP-CIDR,16.50.248.80/29
+  - IP-CIDR,16.50.66.0/24
   - IP-CIDR,16.50.67.0/25
   - IP-CIDR,16.50.67.128/26
   - IP-CIDR,16.50.69.192/27
+  - IP-CIDR,16.51.86.16/29
+  - IP-CIDR,16.51.86.8/29
   - IP-CIDR,16.62.188.224/28
+  - IP-CIDR,16.62.248.128/25
+  - IP-CIDR,16.62.51.0/24
   - IP-CIDR,16.62.54.0/25
   - IP-CIDR,16.62.56.224/27
   - IP-CIDR,16.62.7.192/26
+  - IP-CIDR,16.63.20.0/25
   - IP-CIDR,16.63.77.8/29
   - IP-CIDR,160.1.128.0/24
   - IP-CIDR,176.34.159.192/26
@@ -1281,6 +1297,7 @@ payload:
   - IP-CIDR,18.100.209.224/27
   - IP-CIDR,18.100.64.128/25
   - IP-CIDR,18.100.65.0/26
+  - IP-CIDR,18.100.66.0/23
   - IP-CIDR,18.101.90.48/29
   - IP-CIDR,18.102.2.0/23
   - IP-CIDR,18.117.239.68/30
@@ -1309,6 +1326,7 @@ payload:
   - IP-CIDR,18.144.184.0/23
   - IP-CIDR,18.144.76.128/25
   - IP-CIDR,18.144.76.32/29
+  - IP-CIDR,18.153.168.0/23
   - IP-CIDR,18.156.52.0/24
   - IP-CIDR,18.156.54.0/23
   - IP-CIDR,18.162.127.0/26
@@ -1410,9 +1428,12 @@ payload:
   - IP-CIDR,18.254.68.0/23
   - IP-CIDR,18.60.252.248/29
   - IP-CIDR,18.60.64.192/26
+  - IP-CIDR,18.60.65.0/24
   - IP-CIDR,18.60.68.0/25
   - IP-CIDR,18.60.78.192/27
   - IP-CIDR,18.60.78.240/28
+  - IP-CIDR,18.61.189.0/24
+  - IP-CIDR,18.61.26.0/24
   - IP-CIDR,185.2.220.0/22
   - IP-CIDR,185.9.188.0/22
   - IP-CIDR,192.173.64.0/18
@@ -1512,6 +1533,7 @@ payload:
   - IP-CIDR,3.145.230.0/24
   - IP-CIDR,3.145.246.48/28
   - IP-CIDR,3.145.31.0/26
+  - IP-CIDR,3.146.44.0/23
   - IP-CIDR,3.15.35.0/24
   - IP-CIDR,3.15.36.0/26
   - IP-CIDR,3.16.146.0/29
@@ -1629,6 +1651,7 @@ payload:
   - IP-CIDR,3.253.184.0/22
   - IP-CIDR,3.253.188.0/24
   - IP-CIDR,3.253.189.64/28
+  - IP-CIDR,3.255.16.0/22
   - IP-CIDR,3.26.109.216/30
   - IP-CIDR,3.26.127.24/29
   - IP-CIDR,3.26.138.0/23
@@ -1644,14 +1667,17 @@ payload:
   - IP-CIDR,3.27.127.176/28
   - IP-CIDR,3.28.255.80/28
   - IP-CIDR,3.28.63.128/25
+  - IP-CIDR,3.28.64.0/24
   - IP-CIDR,3.28.65.0/26
   - IP-CIDR,3.28.70.48/28
   - IP-CIDR,3.28.70.96/27
   - IP-CIDR,3.29.147.40/29
   - IP-CIDR,3.29.147.48/28
+  - IP-CIDR,3.29.202.240/28
   - IP-CIDR,3.29.40.128/25
   - IP-CIDR,3.29.40.64/26
   - IP-CIDR,3.29.57.0/26
+  - IP-CIDR,3.29.89.0/24
   - IP-CIDR,3.30.129.0/24
   - IP-CIDR,3.30.130.0/23
   - IP-CIDR,3.30.204.0/24
@@ -1819,15 +1845,18 @@ payload:
   - IP-CIDR,35.90.132.0/23
   - IP-CIDR,35.92.26.0/24
   - IP-CIDR,35.93.124.0/22
+  - IP-CIDR,35.94.72.0/22
   - IP-CIDR,37.77.184.0/21
   - IP-CIDR,38.72.126.0/24
+  - IP-CIDR,40.176.65.0/24
   - IP-CIDR,43.198.192.104/29
   - IP-CIDR,43.201.155.152/29
   - IP-CIDR,43.201.155.160/29
   - IP-CIDR,43.207.179.168/29
   - IP-CIDR,43.207.179.176/29
   - IP-CIDR,43.218.193.64/29
-  - IP-CIDR,43.218.193.96/28
+  - IP-CIDR,43.218.193.96/27
+  - IP-CIDR,43.218.222.160/27
   - IP-CIDR,43.218.56.128/25
   - IP-CIDR,43.218.56.64/26
   - IP-CIDR,43.218.71.0/26
@@ -1847,6 +1876,7 @@ payload:
   - IP-CIDR,44.216.41.152/29
   - IP-CIDR,44.216.41.160/29
   - IP-CIDR,44.218.96.0/23
+  - IP-CIDR,44.220.28.0/22
   - IP-CIDR,44.224.0.0/16
   - IP-CIDR,44.227.178.0/24
   - IP-CIDR,44.230.0.0/16
@@ -1873,9 +1903,14 @@ payload:
   - IP-CIDR,44.242.181.0/27
   - IP-CIDR,44.242.181.32/28
   - IP-CIDR,45.57.0.0/17
+  - IP-CIDR,51.112.11.64/27
+  - IP-CIDR,51.112.20.0/23
   - IP-CIDR,51.16.103.16/28
   - IP-CIDR,51.16.103.32/27
+  - IP-CIDR,51.16.149.0/24
+  - IP-CIDR,51.16.150.0/24
   - IP-CIDR,51.16.183.64/27
+  - IP-CIDR,51.17.129.160/27
   - IP-CIDR,51.17.72.0/22
   - IP-CIDR,52.0.0.0/15
   - IP-CIDR,52.10.0.0/15
