更新我的meta订阅转换

--- a/MyConvert/MyRules_YTOO_Meta.ini
+++ b/MyConvert/MyRules_YTOO_Meta.ini
@@ -16,7 +16,7 @@ ruleset=Bilibili,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/ma
 ruleset=Domestic,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/MainlandMediaNoBilibili.yaml,86400
 
 ruleset=Proxy,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Proxy.yaml,86400
-ruleset=Proxy,[]GEOSITE,geosite:geolocation-!cn
+ruleset=Proxy,[]GEOSITE,geolocation-!cn
 ruleset=SpeedTest,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/SpeedTest.yaml,86400
 ruleset=Domestic,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Domestic.yaml,86400
 ruleset=Domestic,[]GEOIP,CN
