--- a/Rules_Parsers/clash-verge/Integrate/SecMarge.yaml
+++ b/Rules_Parsers/clash-verge/Integrate/SecMarge.yaml
@@ -1,23 +1,28 @@
 # Merge Template for clash verge
 # The `Merge` format used to enhance profile
 
-rules:
+prepend-rules:
   - RULE-SET,Reject,AdBlock
+  - GEOSITE,category-ads-all,AdBlock
   - RULE-SET,Direct,DIRECT
   - RULE-SET,OpenAI,OpenAI
   - RULE-SET,Apple,AppleAndMicrosoft
   - RULE-SET,Microsoft,AppleAndMicrosoft
   - RULE-SET,PayPal,GameAndPayPal
   - RULE-SET,Game,GameAndPayPal
+  - RULE-SET,YouTube,YouTube
+  - GEOSITE,youtube,YouTube
   - RULE-SET,GlobalMedia,GlobalMedia
   - RULE-SET,Bilibili,Bilibili
-  - RULE-SET,MainlandMedia,Domestic
+  - GEOSITE,bilibili,Bilibili
   - RULE-SET,PROXY,Proxy
-  - RULE-SET,SpeedTest,Speedtest
+  - GEOSITE,geolocation-!cn,Proxy
+  - RULE-SET,SpeedTest,SpeedTest
   - RULE-SET,Domestic,Domestic
+  - RULE-SET,MainlandMedia,Domestic
+  - GEOSITE,CN,Domestic
   - GEOIP,CN,Domestic
   - MATCH,Others
-
 rule-providers: 
   Direct:
     behavior: classical
